gcc/testsuite/g++.dg/template/using12.C
struct A {
};

template <typename T>
struct S : public A {
  using A::operator(); // { dg-error "has not been declared" }
};
